# RecursiveStereoUAV

./: .gitignore  .travis.yml  LICENSE  README.md  circle.yml  config.yml  repository.rosinstall  shippaple.yml
airsim_ros_interface/: .gitignore  CMakeLists.txt  README_BOOST.md  build.cmd
airsim_ros_interface/include/: InputParser.hpp  ProcessSynchronizationQueue.hpp  StereoImageMetaDataDefinitions.hpp  StereoImageRpcClient.hpp  airsim_offline_image_provider.hpp  airsim_rpc_client.hpp  airsim_zmq_bridge.hpp  invert_matrix.hpp  kitti_utils.hpp  oxts_type.hpp  ros_to_airsim_class.h  trace_queue.hpp
airsim_ros_interface/src/: StereoImageRpcClient.cpp  airsim_offline_image_provider.cpp  airsim_rpc_client.cpp  airsim_zmq_bridge.cpp  dummy_main.cpp  kitti_utils.cpp  main.cpp  main.cpp.bak  receiver.cpp  ros_to_airsim_class.cpp  sender.cpp
airsim_ros_interface/src/test/: main_send_image.cpp
airsim_to_ros/: CMakeLists.txt  package.xml
airsim_to_ros/include/airsimros_airsim_to_ros/: airsim_to_ros.h
airsim_to_ros/src/: airsim_to_ros.cpp  airsim_to_ros_node.cpp
airsim_to_ros/test/: airsim_to_ros_test.cpp  airsim_to_ros_test.test
airsim_to_ros_core/: CMakeLists.txt  package.xml
airsim_to_ros_core/include/airsimros_airsim_to_ros/: airsim_to_ros.h
airsim_to_ros_core/src/: airsim_to_ros.cpp
airsim_to_ros_core/test/: airsim_to_ros_test.cpp
airsim_to_ros_node/: CMakeLists.txt  package.xml
airsim_to_ros_node/src/: airsim_to_ros_node.cpp
airsim_to_ros_node/test/: airsim_to_ros_node_tests.cpp  airsim_to_ros_node_tests.test
js_agent_scripts/: CMakeLists.txt  package.xml
js_agent_scripts/launch/: agent_closed_loop.launch  agent_communication_only.launch  agent_default.launch  agent_open_loop.launch  agent_subscriber.launch  closed_loop.launch  communication_only.launch  open_loop.launch
js_airsim_to_ros_library/: CMakeLists.txt  package.xml
js_airsim_to_ros_library/flatbuffers/: Image.fbs  Point.fbs  Pose.fbs  Quaternion.fbs  README.md  StarBuffers.fbs  StereoImageType.fbs  Trajectory3D.fbs  Trajectory3DPointStamped.fbs  Trajectory3DPointStampedRoot.fbs  time.fbs  time_ros_to_airsim.fbs
js_airsim_to_ros_library/include/js_airsim_to_ros_library/: Header_generated.h  Image_generated.h  Point_generated.h  (+10 more)
js_airsim_to_ros_library/src/: airsim_to_ros_class.cpp
js_airsim_to_ros_library/test/: test_airsim_to_ros_class.cpp
js_airsim_to_ros_node/: CMakeLists.txt  package.xml
js_airsim_to_ros_node/flatbuffers/: Header.fbs
js_airsim_to_ros_node/launch/: airsim_to_ros_image_publisher_node.launch  airsim_to_ros_node.launch
js_airsim_to_ros_node/msg/: Trajectory3D.msg
js_airsim_to_ros_node/src/: airsim_to_ros_image_publisher_node.cpp  airsim_to_ros_node.cpp
js_airsim_to_ros_node/test/: test_airsim_to_ros_node.cpp  test_airsim_to_ros_node.test  test_flatbuffer_zmq.launch
js_common/: CMakeLists.txt  package.xml
js_messages/: CMakeLists.txt  package.xml
js_messages/flatbuffers/: Image.fbs  OrientationRPY.fbs  Point.fbs  PointRPY.fbs  PoseMessageRoot.fbs  PoseRPY.fbs  Quaternion.fbs  README.md  StereoImage.fbs  StereoImagePose.fbs  Trajectory3D.fbs  Trajectory3DPointStamped.fbs  time_ros_to_airsim.fbs
js_messages/msg/: Trajectory3DPointStamped.msg
js_python_example_node/: CMakeLists.txt  README  package.xml
js_python_example_node/launch/: python_example_node.launch
js_python_example_node/src/: pynode.py
js_recursive_stereo/: .gitignore  CMakeLists.txt  Checkerboard.txt  package.xml
js_recursive_stereo/launch/: pcl_publisher.launch  recursive_stereo.launch
js_recursive_stereo/python_vs_matlab/: arrangeData.m  generate_pcl.m  generate_pcl.py  python.py
js_recursive_stereo/resources/: README.md
js_recursive_stereo/src/: pcl_publisher_node.py  recursive_stereo.py  recursive_stereo_node.py  recursive_stereo_testbench.py  stereo_match.py
js_trajectory_controller_node/: CMakeLists.txt  package.xml
js_trajectory_controller_node/launch/: ideal_trajectory_controller_node.launch
js_trajectory_controller_node/src/: ideal_trajectory_controller_node.cpp  trajectory_point_to_airsim_class.cpp
js_trajectory_planning_node/: CMakeLists.txt  package.xml
js_trajectory_planning_node/launch/: ideal_trajectory_controller_node.launch  trajectory_planning_node.launch
js_trajectory_planning_node/src/: planner_wrapper.cpp  rrt_class.cpp  rrt_node.cpp  rrtframe.cpp  rrtglcontext.cpp  rtrrtstar_class.cpp  trajectory_planning_node.cpp  trajectory_planning_rrt_2d_node.cpp  wxapplicationnode.cpp
js_trajectory_planning_node/test/: birrt_test.cpp  grid_state_space_test.cpp  obstacle_grid_test.cpp  space_state_space_test.cpp  tree_test.cpp
js_wxwidget_node/: CMakeLists.txt  package.xml
js_wxwidget_node/launch/: wxwidget_node.launch
js_wxwidget_node/src/: wxwidget_node.cpp
robojackets_3d_trajectory_planning_node/: CMakeLists.txt  package.xml
robojackets_3d_trajectory_planning_node/launch/: robojackets_rrt_node.launch
robojackets_3d_trajectory_planning_node/src/: BiRRT.h  PlannerWrapper.cpp  PlannerWrapper.h  PlannerWrapper.hpp  StateSpace.h  StateSpace.hpp  Tree.h  Tree.hpp  birrt.h  helpers.cpp  planner_wrapper.cpp  planner_wrapper.h  postprocessing.h  rrt_node.cpp  rrt_node.h  rrtframe.cpp  rrtglcanvas.h  rrtglcontext.cpp  rrtglcontext.h  state_space.h  tree.h  tree_to_draw.h  util.h  wall_example.cpp  wxApplication.cpp  wxApplication.h  wxApplication.hpp  wxapplication.cpp  wxapplication.h  wxapplicationnode.cpp  wxapplicationnode.h
robojackets_3d_trajectory_planning_node/test/: birrt_test.cpp  grid_state_space_test.cpp  obstacle_grid_test.cpp  space_state_space_test.cpp  tree_test.cpp
robojackets_trajectory_planning_node/: CMakeLists.txt  package.xml
robojackets_trajectory_planning_node/launch/: robojackets_rrt_node.launch
robojackets_trajectory_planning_node/src/: BiRRT.hpp  PlannerWrapper.hpp  StateSpace.hpp  Tree.hpp  rrt_node.cpp  rrt_node.hpp  wxApplication.cpp  wxApplication.hpp
sr_sample_cpp_library/: CMakeLists.txt  package.xml
sr_sample_cpp_library/src/: sample_cpp_class.cpp
sr_sample_cpp_library/test/: test_sample_cpp_class.cpp
(+132 files in other folders)
