<?xml version="1.0"?>
<package>
    <name>js_agent_scripts</name>
    <version>0.0.1</version>
    <description>The js_agent_scripts package</description>
    <maintainer email="jonathan.schmalhofer@mytum.de">Jonathan Bryan Schmalhofer</maintainer>

    <license>MIT</license>

    <author>Jonathan Bryan Schmalhofer</author>

    <buildtool_depend>catkin</buildtool_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>roscpp</run_depend>

</package>
