<?xml version="1.0"?>
<package>
    <name>js_common</name>
    <version>0.0.1</version>
    <description>The js_common package</description>
    <maintainer email="jonathan.schmalhofer@mytum.de">Jonathan Bryan Schmalhofer</maintainer>

    <license>MIT</license>

    <author>Jonathan Bryan Schmalhofer</author>
    <build_depend>js_messages</build_depend>
    <buildtool_depend>catkin</buildtool_depend>
    <run_depend>js_messages</run_depend>


</package>
